# ST_VSR_Project

./: .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  evaluate.py  evaluate_extreme.py  evaluate_tof.py  inference.py  main.py  profile_model.py  pyproject.toml  run_mmagic.py  temp.py  train.py  train_sanity_check.py
checkpoints/: st_vsr_epoch_1.pth  st_vsr_epoch_10.pth  st_vsr_epoch_11.pth  st_vsr_epoch_12.pth  st_vsr_epoch_13.pth  st_vsr_epoch_14.pth  st_vsr_epoch_15.pth  st_vsr_epoch_16.pth  st_vsr_epoch_17.pth  st_vsr_epoch_18.pth  st_vsr_epoch_19.pth  st_vsr_epoch_2.pth  st_vsr_epoch_20.pth  st_vsr_epoch_21.pth  st_vsr_epoch_22.pth  st_vsr_epoch_23.pth  st_vsr_epoch_24.pth  st_vsr_epoch_25.pth  st_vsr_epoch_26.pth  st_vsr_epoch_27.pth  st_vsr_epoch_3.pth  st_vsr_epoch_4.pth  st_vsr_epoch_5.pth  st_vsr_epoch_6.pth  st_vsr_epoch_7.pth  st_vsr_epoch_8.pth  st_vsr_epoch_9.pth
checkpoints/full_model/: st_vsr_best.pth  st_vsr_epoch_10.pth  st_vsr_epoch_100.pth  st_vsr_epoch_20.pth  st_vsr_epoch_30.pth  st_vsr_epoch_40.pth  st_vsr_epoch_50.pth  st_vsr_epoch_60.pth  st_vsr_epoch_70.pth  st_vsr_epoch_80.pth  st_vsr_epoch_90.pth  st_vsr_latest.pth
datasets/: vimeo90k_st.py
models/: st_network.py  t_aiem.py
scripts/: README.md
scripts/benchmark/: benchmark_runtime_Ours.py  benchmark_runtime_unified.py  count_params.py  profile_model.py
scripts/data/: generate_hard_lr.py
scripts/experimental/: inference2.py
scripts/shell/: eval_ablation_wo_semantic_prior_ep60.sh  eval_ablation_wo_time_cond_ep60.sh  eval_extreme_REDS4_Hard.sh  (+6 more)
utils/: util.py
(+15 files in other folders)
