[project]
name = "st-vsr-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.0",
    "lpips>=0.1.4",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "peft>=0.18.1",
    "safetensors>=0.7.0",
    "scikit-image>=0.26.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]
